# advanced-calculator-c-

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/: main.cpp
src/app/: application.cpp  application.h
src/core/: expression_parser.cpp  expression_parser.h
src/models/: history_entry.h
src/services/: formula_service.cpp  formula_service.h  history_service.cpp  history_service.h  settings_service.cpp  settings_service.h
src/ui/views/: main_window.cpp  main_window.h
themes/: dark.qss
